// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overview: update business details modal renders correctly when opened for restricted account 1`] = `
<div
  aria-labelledby="components-modal-header-0"
  class="components-modal__frame wcpay-update-business-details-modal"
  role="dialog"
  tabindex="-1"
>
  <div
    class="components-modal__content"
    role="document"
  >
    <div
      class="components-modal__header"
    >
      <div
        class="components-modal__header-heading-container"
      >
        <h1
          class="components-modal__header-heading"
          id="components-modal-header-0"
        >
          Update business details
        </h1>
      </div>
      <button
        aria-label="Close dialog"
        class="components-button has-icon"
        type="button"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 13.06l3.712 3.713 1.061-1.06L13.061 12l3.712-3.712-1.06-1.06L12 10.938 8.288 7.227l-1.061 1.06L10.939 12l-3.712 3.712 1.06 1.061L12 13.061z"
          />
        </svg>
      </button>
    </div>
    <div
      class="wcpay-update-business-details-modal__wrapper"
    >
      <div
        class="wcpay-update-business-details-modal__body"
      >
        <p>
          Payments and deposits are disabled for this account until missing information is updated. Please update the following information in the Stripe dashboard.
        </p>
        <div
          class="components-notice is-warning"
        >
          <div
            class="components-notice__content"
          >
            The provided document was from an unsupported country.
            <div
              class="components-notice__actions"
            />
          </div>
        </div>
        <div
          class="components-notice is-warning"
        >
          <div
            class="components-notice__content"
          >
            The representative must have an address in the same country as the company.
            <div
              class="components-notice__actions"
            />
          </div>
        </div>
      </div>
    </div>
    <hr />
    <div
      class="wcpay-update-business-details-modal__footer"
    >
      <button
        class="components-button is-secondary"
        type="button"
      >
        Cancel
      </button>
      <button
        class="components-button is-primary"
        type="button"
      >
        Update business details
      </button>
    </div>
  </div>
</div>
`;

exports[`Overview: update business details modal renders correctly when opened for restricted soon account with current deadline 1`] = `
<div
  aria-labelledby="components-modal-header-1"
  class="components-modal__frame wcpay-update-business-details-modal"
  role="dialog"
  tabindex="-1"
>
  <div
    class="components-modal__content"
    role="document"
  >
    <div
      class="components-modal__header"
    >
      <div
        class="components-modal__header-heading-container"
      >
        <h1
          class="components-modal__header-heading"
          id="components-modal-header-1"
        >
          Update business details
        </h1>
      </div>
      <button
        aria-label="Close dialog"
        class="components-button has-icon"
        type="button"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 13.06l3.712 3.713 1.061-1.06L13.061 12l3.712-3.712-1.06-1.06L12 10.938 8.288 7.227l-1.061 1.06L10.939 12l-3.712 3.712 1.06 1.061L12 13.061z"
          />
        </svg>
      </button>
    </div>
    <div
      class="wcpay-update-business-details-modal__wrapper"
    >
      <div
        class="wcpay-update-business-details-modal__body"
      >
        <p>
          Additional information is required to verify your business. Update by 7pm Dec 31, 2021 to avoid a disruption in deposits.
        </p>
        <div
          class="components-notice is-warning"
        >
          <div
            class="components-notice__content"
          >
            The provided document was from an unsupported country.
            <div
              class="components-notice__actions"
            />
          </div>
        </div>
        <div
          class="components-notice is-warning"
        >
          <div
            class="components-notice__content"
          >
            The representative must have an address in the same country as the company.
            <div
              class="components-notice__actions"
            />
          </div>
        </div>
      </div>
    </div>
    <hr />
    <div
      class="wcpay-update-business-details-modal__footer"
    >
      <button
        class="components-button is-secondary"
        type="button"
      >
        Cancel
      </button>
      <button
        class="components-button is-primary"
        type="button"
      >
        Update business details
      </button>
    </div>
  </div>
</div>
`;

exports[`Overview: update business details modal renders correctly when opened for restricted soon account without current deadline 1`] = `
<div
  aria-labelledby="components-modal-header-2"
  class="components-modal__frame wcpay-update-business-details-modal"
  role="dialog"
  tabindex="-1"
>
  <div
    class="components-modal__content"
    role="document"
  >
    <div
      class="components-modal__header"
    >
      <div
        class="components-modal__header-heading-container"
      >
        <h1
          class="components-modal__header-heading"
          id="components-modal-header-2"
        >
          Update business details
        </h1>
      </div>
      <button
        aria-label="Close dialog"
        class="components-button has-icon"
        type="button"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 13.06l3.712 3.713 1.061-1.06L13.061 12l3.712-3.712-1.06-1.06L12 10.938 8.288 7.227l-1.061 1.06L10.939 12l-3.712 3.712 1.06 1.061L12 13.061z"
          />
        </svg>
      </button>
    </div>
    <div
      class="wcpay-update-business-details-modal__wrapper"
    >
      <div
        class="wcpay-update-business-details-modal__body"
      >
        <p>
          Payments and deposits are disabled for this account until missing information is updated. Please update the following information in the Stripe dashboard.
        </p>
        <div
          class="components-notice is-warning"
        >
          <div
            class="components-notice__content"
          >
            The provided document was from an unsupported country.
            <div
              class="components-notice__actions"
            />
          </div>
        </div>
        <div
          class="components-notice is-warning"
        >
          <div
            class="components-notice__content"
          >
            The representative must have an address in the same country as the company.
            <div
              class="components-notice__actions"
            />
          </div>
        </div>
      </div>
    </div>
    <hr />
    <div
      class="wcpay-update-business-details-modal__footer"
    >
      <button
        class="components-button is-secondary"
        type="button"
      >
        Cancel
      </button>
      <button
        class="components-button is-primary"
        type="button"
      >
        Update business details
      </button>
    </div>
  </div>
</div>
`;
